objects/ASI_CRM_Product_Warehouse_Photo__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipName>Product_Warehouse_Photos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Category__c</fullName>
        <label>Photo Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bottle Back</fullName>
                </value>
                <value>
                    <fullName>Bottle Front</fullName>
                </value>
                <value>
                    <fullName>BQS Back</fullName>
                </value>
                <value>
                    <fullName>BQS Front</fullName>
                </value>
                <value>
                    <fullName>Cap Collection</fullName>
                </value>
                <value>
                    <fullName>Case (FA)</fullName>
                </value>
                <value>
                    <fullName>Case Inside</fullName>
                </value>
                <value>
                    <fullName>Case Outside</fullName>
                </value>
                <value>
                    <fullName>Giftbox (FA)</fullName>
                </value>
                <value>
                    <fullName>Giftbox Inside</fullName>
                </value>
                <value>
                    <fullName>Giftbox Outside</fullName>
                </value>
                <value>
                    <fullName>Label Back CH (FA)</fullName>
                </value>
                <value>
                    <fullName>Label Back EN (FA)</fullName>
                </value>
                <value>
                    <fullName>Label Front EN (FA)</fullName>
                </value>
                <value>
                    <fullName>QR Code Sticker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Version__c</fullName>
        <label>Photo Version</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Preview_URL__c</fullName>
        <formula>HYPERLINK(if(
CASE(LOWER( ASI_File_Extension__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&apos; &amp; ASI_FileID__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
), &apos;Link&apos;)</formula>
        <label>Preview URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FeedItemID__c</fullName>
        <label>FeedItemID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FileID__c</fullName>
        <label>FileID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Extension__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_File_Extension__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_FileID__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_FileID__c, ASI_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_Image_URL__c), ASI_File_Name__c, IMAGE(ASI_Image_URL__c, ASI_File_Name__c))</formula>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <label>Item Group Photo Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>NAME</columns>
        <columns>ASI_File_Name__c</columns>
        <columns>ASI_Name__c</columns>
        <columns>ASI_CRM_Photo_Category__c</columns>
        <columns>ASI_CRM_Photo_Version__c</columns>
        <columns>ASI_CRM_Comments__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_File_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PW-{YY}-{00000000}</displayFormat>
        <label>Product Warehouse Photo NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Group Photo Mappings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Product_Warehouse_Photo</fullName>
        <active>true</active>
        <label>CN Product Warehouse Photo</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>